[project]
name = "podman-sandbox"
version = "0.1.0"
description = "A CLI tool for sandboxing code execution in Podman containers"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
sandbox = "podman_sandbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["podman_sandbox"]
